--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pipecandy",
+  "name": "loopback-isomorphic-react-flux",
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
@@ -48,5 +48,5 @@
     "type": "",
     "url": ""
   },
-  "description": "pipecandy"
+  "description": "loopback-isomorphic-react-flux"
 }
