--- a/server/model-config.json
+++ b/server/model-config.json
@@ -14,26 +14,26 @@
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "psqlDs"
   },
   "AccessToken": {
-    "dataSource": "db",
+    "dataSource": "psqlDs",
     "public": false
   },
   "ACL": {
-    "dataSource": "db",
+    "dataSource": "psqlDs",
     "public": false
   },
   "RoleMapping": {
-    "dataSource": "db",
+    "dataSource": "psqlDs",
     "public": false
   },
   "Role": {
-    "dataSource": "db",
+    "dataSource": "psqlDs",
     "public": false
   },
   "CoffeeShop": {
-    "dataSource": "mysqlDs",
+    "dataSource": "psqlDs",
     "public": true
   }
 }
